tests/NormalTests/paczka1/small_fuzzy/92817137.err
Error in line 4: TXY5b A144 -3,8
Error in line 1: A144 S559 58,7
Error in line 5: moP9w A892 85,5
Error in line 9: A144 A144 33,1
